# advent-of-code

2023/: deno.json  main.ts
2023/days/: day01.ts  day02.ts  day03.ts  day04.ts  day05.ts  day__.ts
2024/: CMakeLists.txt
2024/src/: main.cpp
2024/src/days/: day00.cpp  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  days.h
